--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,10 @@ path = "src/main.rs"
 
 [dependencies]
 image = "0.23.9"
-nalgebra = "0.22.0"
+nalgebra = { version = "0.22.0", features = ["serde-serialize"] }
 noise = "0.6.0"
 toml = "0.5.6"
 serde = { version = "1.0", features = ["derive"] }
+anyhow = "1.0.32"
+serde_json = "1.0.57"
+dyn-clonable = "0.9.0"
